--- a/style.css
+++ b/style.css
@@ -1,75 +1,86 @@
+html, body, #map {
+        background-color: #fff
+      }
+
 body {
     padding: 0px;
     margin: 0px;
-    font-family: "Helvetica", sans-serif;
     overflow: hidden;
+    font-family: "Helvetica", sans-serif;
 }
 
 #map {
+    /*height: 100vh;*/
+    height: 200px;/*added*/
+    width: 100vw;/*width: 70vw;*/    
     position: absolute;
+    border-bottom: 3px solid orange;/*added*/
+    top: 0; /*added*/
     left: 0;
-    width: 70vw;
-    height: 100vh;
     z-index: 1;
 }
 
 #narration {
     position: absolute;
-    width: 30vw;
-    min-width: 300px;
-    right: 0px;
-    height: 100vh;
-    overflow: auto;
-    z-index: 99;
-    background: rgba(254,254,254, 1.0); /* to apply opacity background only. */
+    top: 203px;/*added*/
+    width: 100vw;/*added*/
+    /*width: 30vw;*/
+    height: calc(100vh - 200px);/*added*/
+    /*height: 100vh;*/
+    /*min-width: 300px;*/
+    /*right: 0px;*/
+    /*overflow: auto;*/
+    /*z-index: 99;*/
+    z-index: 80;/*added*/
+    background: rgba(254,254,254, .8); /* to apply opacity background only. */
 }
 
-
 #contents {
-    padding: 0%;
+    padding: 0;
     width: 100%;
-    margin-top: 0px; /*Adjust if Title header needs more space */
+    margin-top: 0; /*Adjust if Title header needs more space */
     height: 100%; /* Adjust to fit max Description length, one setting for all; alternative is 100% */
     overflow-y: scroll;
     overflow-x: hidden;
 }
 
 #contents .space-at-the-top {
-    height: 30px; /*30px*/
-    margin: 0px;
+    height: 40px; /*30px*/
+    margin: 0;
 }
 
 #contents .space-at-the-bottom {
-    height: 130px; /**/
+    height: 200px; /*px130*/
     margin: 0px; 
     text-align: center;
-    padding-top: 70px; /**/
+    padding-top: 150px; /*70px*/
 }
 
+
+#title {
+    position: absolute;
+    right: 0;
+    top: 203px;/*0px*/
+    background-color: white;
+    width: 100vw;/*30vw*/
+    /*min-width: 300px;*/
+    z-index: 100;
+    margin: 0;
+    padding: 0;
+    /*visibility: hidden;*/
+    /*font-weight: bold;*/
+    text-align: center;
+}
+/*
 #chapter {
     position: absolute;
     z-index: 999;
-    margin: 0px; /*10px*/
+    margin: 0px;
     display: block;
     text-align: center;
     color: #fff;
 }
-
-#title {
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    background-color: white;
-    width: 30vw;
-    min-width: 300px;
-    z-index: 100;
-    margin: 0px;
-    padding: 0px;
-}
-
-h2 {/*was h3*/
-    margin-bottom: 0px;
-}
+*/
 
 .image-container {
     /* margin + padding = imageContainerMargin in script.js */
@@ -94,17 +105,26 @@ h2 {/*was h3*/
 }
 
 .img-holder {
-    margin: 0px;
+    margin: 0;
     height: 200px;
     max-height: 200px;
     width: 100%;
 }
 
+/*
 .title-text {
     font-weight: bold;
     text-align: center;
     margin: 10px;
 }
+*/
+/*
+  #title {
+    width: 80%;
+    left: 10%;
+    min-width: 0;
+  }
+*/
 
 .chapter-header {
     display: block;
@@ -120,9 +140,8 @@ h2 {/*was h3*/
 .description {
     margin: 20px; /**/
     text-align: left;
-    font-size: 12pt;
+    font-size: 14pt;
     padding: 20px;
-    white-space: pre-line;
     line-height: 140%;
 }
 
@@ -140,26 +159,8 @@ h2 {/*was h3*/
   ::-webkit-scrollbar {
       display: none;
   }
-  #map {
-    width: 100vw;
-  }
-  #title {
-    width: 80%;
-    left: 10%;
-    min-width: 0;
-  }
-  #narration {
-    width: 80%;
-    min-width: 0;
-    left: 10%;
-    background: none;
-    opacity: 0.8;
-  }
-  .description {
-      padding: 0;
-      padding-bottom: 10px;
-  }
+
   .leaflet-control-container {
-      display: none;
+      display: visible;
   }
 }
