--- a/style.css
+++ b/style.css
@@ -160,6 +160,9 @@ body {
       display: none;
   }
 */
+
+@media screen and (min-width: 768px)
+        
   .leaflet-control-container {
       display: visible;
   }
