--- a/style-desktop.css
+++ b/style-desktop.css
@@ -5,11 +5,13 @@
     height: 100vh;
     max-width: 500px;
     top: 0;
+    right: 0;/*added*/
   }
 
   #map {
     width: calc(100vw - 460px);
-    left: 460px;
+    left: 0;/*added*/
+    /*left: 460px;*/
     height: 100vh;
     border: 0;
     z-index: 0;
@@ -19,6 +21,7 @@
     width: 60vw;
     max-width: 500px;
     top: 0;
+    right: 0;/*added*/
   }
 
   .leaflet-control-attribution {
