--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ body {
     margin: 0;
     margin-bottom: 5px;
     /*height: 200px;*/
-    max-height: 200px;
+    /*max-height: 200px;*/
     width: 100%;
 }
 
