--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
     right: 0;
     top: 303px;/*0px*/
     background-color: white;
+        opacity: .5;
     width: 100vw;/*30vw*/
     /*min-width: 300px;*/
     z-index: 100;
