--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
     /*visibility: hidden;*/
     /*font-weight: bold;*/
     text-align: center;
-        opacity: .5;
+        opacity: 1;
 }
 /*
 #chapter {
