--- a/style-desktop.css
+++ b/style-desktop.css
@@ -1,7 +1,7 @@
 @media screen and (min-width: 600px) {
 
   #narration {
-    width: 60vw;
+    width: 40vw;
     height: 100vh;
     max-width: 500px;
     top: 0;
@@ -9,7 +9,7 @@
   }
 
   #map {
-    width: calc(100vw - 460px);
+    width: calc(100vw - 40vw);
     left: 0;/*added*/
     /*left: 460px;*/
     height: 100vh;
@@ -18,7 +18,7 @@
   }
 
   #title {
-    width: 60vw;
+    width: 40vw;
     max-width: 500px;
     top: 0;
     right: 0;/*added*/
