--- a/style-desktop.css
+++ b/style-desktop.css
@@ -24,10 +24,12 @@
     right: 0;/*added*/
   }
 
+  .leaflet-control-container {
+     visibility: visible;  
+  
 /*
   .leaflet-control-attribution {
     visibility: visible;
     left: 0;
   }
 */
-}
