--- a/style-desktop.css
+++ b/style-desktop.css
@@ -23,10 +23,10 @@
     top: 0;
     right: 0;/*added*/
   }
-
+/*
   .leaflet-control-container {
      visibility: visible;  
-  
+*/  
 /*
   .leaflet-control-attribution {
     visibility: visible;
