--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ body {
     text-align: center;
     font-size: 120%;
     padding: 0 5px;
-    font-weight: bold;
+    font-weight: 700;
 }
 
 .source {
