--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body {
 .chapter-header {
     display: block;
     text-align: center;
-    font-weight: 700;    
+    font-weight: 700;/*Error parsing font-weight. Not sure why.*/    
     font-size: 16pt;
     padding: 0 5px;
 }
@@ -164,8 +164,8 @@ body {
       display: none;
   }
 */
-/*       
-  .leaflet-control-container {
+       
+  .leaflet-control-zoom {
      visibility: hidden;
   }
-*/
+
